add_executable(mutex_test Mutex_test.cpp)
target_link_libraries(mutex_test blackpanther_base)

add_executable(thread_test Thread_test.cpp)
target_link_libraries(thread_test blackpanther_base)

add_executable(atomic_unittest Atomic_unittest.cpp)
target_link_libraries(atomic_unittest blackpanther_base)

add_executable(processinfo_test ProcessInfo_test.cpp)
target_link_libraries(processinfo_test blackpanther_base)

add_executable(threadpool_test ThreadPool_test.cpp)
target_link_libraries(threadpool_test blackpanther_base)

add_executable(blockingqueue_test BlockingQueue_test.cpp)
target_link_libraries(blockingqueue_test blackpanther_base)

add_executable(singleton_test Singleton_test.cpp)
target_link_libraries(singleton_test blackpanther_base)

add_executable(exception_test Exception_test.cpp)
target_link_libraries(exception_test blackpanther_base)

add_executable(logging_test Logging_test.cpp)
target_link_libraries(logging_test blackpanther_base)

add_executable(date_unittest Date_unittest.cpp)
target_link_libraries(date_unittest blackpanther_base)

if(BOOSTTEST_LIBRARY)
add_executable(logstream_test LogStream_test.cpp)
target_link_libraries(logstream_test blackpanther_base)
endif()

add_executable(logfile_test LogFile_test.cpp)
target_link_libraries(logfile_test blackpanther_base)